--- a/home/style.css
+++ b/home/style.css
@@ -1,5 +1,6 @@
 body {
     margin: 0;
+    font: 'Roboto';
 }
 
 ul {
@@ -21,4 +22,17 @@ ul {
 
 .quote-container {
     background-color: #E5E7EB;
+}
+
+button.signup {
+    background-color: #3882F6;
+    color: white;
+    font-family: 'Roboto';
+    border-radius: 8px;
+    padding: 4px 8px;
+    border: none;
+}
+
+button.action {
+    border: 1px solid white;
 }
