--- a/home/style.css
+++ b/home/style.css
@@ -41,8 +41,10 @@ button.action {
 }
 
 .padded {
+    padding-top: 40px;
+    padding-bottom: 40px;
     padding-right: 160px;
-    padding-left: 80px;
+    padding-left: 160px;
 }
 
 .header-logo {
@@ -65,7 +67,7 @@ button.action {
 .header {
     display: flex;
     justify-content: space-between;
-    padding: 16px;
+    padding: 16px 0;
 }
 
 .link-container {
@@ -82,9 +84,97 @@ button.action {
 
 .image-placeholder {
     width: 50%;
-    height: 100px;
+    flex-grow: 1;
     display: flex;
     justify-content: center;
     align-items: center;
     background-color: gray;
+}
+
+.website-info {
+    width: 50%;
+    display: flex;
+    flex-direction: column;
+    align-items: flex-start;
+    gap: 8px;
+}
+
+.hero-info {
+    display: flex;
+    gap: 16px;
+    flex-grow: 1;
+    padding: 48px 0;
+}
+
+.info-container {
+    text-align: center;
+}
+
+.info-list {
+    display: flex;
+}
+
+.info-item {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+
+.round-square {
+    width: 100px;
+    height: 100px;
+    border-style: solid;
+    border-radius: 8px;
+    border-width: 2px;
+    border-color: #3882F6;
+}
+
+.quote-text {
+    font-size: 36px;
+    font-style: italic;
+    color: #1F2937;
+    font-weight: 200;
+}
+
+.quote-footer {
+    text-align: right;
+    font-weight: bold;
+    color: black;
+    align-self: stretch;
+}
+
+.quote-container {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+}
+
+.footer {
+    text-align: center;
+}
+
+.call-to-action-box {
+    border-radius: 8px;
+    padding: 40px 80px;
+    background-color: #3882F6;
+    display: flex;
+    justify-content: space-between;
+}
+
+.call-to-action-textbox {
+    display: flex;
+    flex-direction: column;
+}
+
+.call-to-action-text {
+    color: #F9FAF8;
+    font-weight: 900;
+    font-size: 24px;
+}
+
+.sign-up-text {
+    color: #F9FAF8;
+    font-weight: 100;
+    font-size: 16px;
 }
